--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,3 +64,10 @@ jobs:
         run: ls
       - name: Deploy site
         run: echo "Deploying..."
+  Information:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get Code
+        uses: actions/checkout@v4
+      - name: Run custom action
+        uses: ./.github/actions/deploy-s3-javascript
